# macs2

./: .gitignore  CMakeLists.txt  README  README.md  build.gradle  field.cpp  field.hpp  graph.dot  graph.ps  graph2.ps  main.cpp  nusmv_result_handler.cpp  nusmv_result_handler.hpp  parser.cpp  parser.hpp  screen.125.smv  screen.2000  screen.2000.smv  screen.96.smv  settings.gradle  smv_writer.cpp  smv_writer.hpp
JSoko_1.73/: License JSoko.txt  Start_JSoko_Linux.sh  Start_JSoko_Windows.bat  readme.txt  settings.ini  user_settings.ini
JSoko_1.73/level/Brian Damgaard/: YASGen.sok
JSoko_1.73/level/Crazy Monk/: Disciple.sok
JSoko_1.73/level/David Holland/: dh5.sok
JSoko_1.73/level/Dries De Clercq/: 696.sok  Fibo.sok  Parallelworlds.sok  Sokodries1.sok  (+1 more)
JSoko_1.73/leveldata/: leveldataDB.backup  leveldataDB.data  leveldataDB.properties  leveldataDB.script
JSoko_1.73/skins/: skn - additional Skin Settings.properties
JSoko_1.73/texts/: texts.properties  texts_de.properties  texts_es.properties  texts_nl.properties  texts_zh.properties
gradle/wrapper/: gradle-wrapper.properties
screens/: screen.100  screen.1001  screen.105  screen.107  screen.109  screen.114  screen.125.smv  screen.364  screen.365  screen.366  screen.367  screen.368  screen.369  screen.370  screen.371  screen.372  screen.373  screen.374  screen.375  screen.376  screen.377  screen.378  screen.379  screen.380  screen.381  screen.382  screen.383  screen.384  screen.385  screen.387  screen.388  screen.389  screen.390  screen.391  screen.392  screen.393  screen.394  screen.395  screen.396  screen.397  (+142 more)
(+53 files in other folders)
